deploy: f1ae313ee127226412bb13ba7e4477596cd2fb4a

--- a/blockchain/blockchain.html
+++ b/blockchain/blockchain.html
@@ -4,7 +4,7 @@
 <head>
     <!-- Book generated using mdBook -->
     <meta charset="UTF-8">
-    <title>issues and solutions - M4n5ter Blog</title>
+    <title>Blockchain TODO - M4n5ter Blog</title>
     <!-- Custom HTML head -->
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
     <meta name="description" content="">
@@ -75,7 +75,7 @@
 
     <nav id="sidebar" class="sidebar" aria-label="Table of contents">
         <div class="sidebar-scrollbox">
-            <ol class="chapter"><li class="chapter-item expanded "><a href="../intro/intro.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li class="chapter-item expanded "><a href="../go/go.html"><strong aria-hidden="true">2.</strong> GO</a></li><li class="chapter-item expanded "><a href="../rust/rust.html"><strong aria-hidden="true">3.</strong> RUST</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../rust/tower/rust_tower.html"><strong aria-hidden="true">3.1.</strong> Tower</a></li><li class="chapter-item "><a href="../rust/mini-redis/mini-redis.html"><strong aria-hidden="true">3.2.</strong> mini-redis</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../rust/mini-redis/hello_tokio.html"><strong aria-hidden="true">3.2.1.</strong> Hello Tokio</a></li><li class="chapter-item "><a href="../rust/mini-redis/spawning.html"><strong aria-hidden="true">3.2.2.</strong> Spawning</a></li><li class="chapter-item "><a href="../rust/mini-redis/shared_state.html"><strong aria-hidden="true">3.2.3.</strong> Shared state</a></li><li class="chapter-item "><a href="../rust/mini-redis/channels.html"><strong aria-hidden="true">3.2.4.</strong> Channels</a></li><li class="chapter-item "><a href="../rust/mini-redis/io.html"><strong aria-hidden="true">3.2.5.</strong> I/O</a></li><li class="chapter-item "><a href="../rust/mini-redis/framing.html"><strong aria-hidden="true">3.2.6.</strong> Framing</a></li><li class="chapter-item "><a href="../rust/mini-redis/async_in_depth.html"><strong aria-hidden="true">3.2.7.</strong> Async in depth TODO</a></li><li class="chapter-item "><a href="../rust/mini-redis/select.html"><strong aria-hidden="true">3.2.8.</strong> Select TODO</a></li><li class="chapter-item "><a href="../rust/mini-redis/streams.html"><strong aria-hidden="true">3.2.9.</strong> Streams TODO</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../issues/issues.html" class="active"><strong aria-hidden="true">4.</strong> issues and solutions</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../issues/docker/docker.html"><strong aria-hidden="true">4.1.</strong> docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../issues/docker/docker_issues.html"><strong aria-hidden="true">4.1.1.</strong> 问题及解决方案</a></li></ol></li><li class="chapter-item "><a href="../issues/mysql/mysql.html"><strong aria-hidden="true">4.2.</strong> mysql</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../issues/mysql/mysql_issues.html"><strong aria-hidden="true">4.2.1.</strong> 问题及解决方案</a></li></ol></li><li class="chapter-item "><a href="../issues/gitea/gitea.html"><strong aria-hidden="true">4.3.</strong> gitea</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../issues/gitea/gitea_issues.html"><strong aria-hidden="true">4.3.1.</strong> 问题及解决方案</a></li></ol></li><li class="chapter-item "><a href="../issues/nginx/nginx.html"><strong aria-hidden="true">4.4.</strong> nginx</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../issues/nginx/nginx_issues.html"><strong aria-hidden="true">4.4.1.</strong> 问题及解决方案</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../blockchain/blockchain.html"><strong aria-hidden="true">5.</strong> Blockchain TODO</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../blockchain/substrate/substrate.html"><strong aria-hidden="true">5.1.</strong> substrate TODO</a></li></ol></li><li class="chapter-item expanded "><a href="../links/links.html"><strong aria-hidden="true">6.</strong> Links</a></li><li class="chapter-item expanded "><a href="../math/math.html"><strong aria-hidden="true">7.</strong> Math</a></li></ol>
+            <ol class="chapter"><li class="chapter-item expanded "><a href="../intro/intro.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li class="chapter-item expanded "><a href="../go/go.html"><strong aria-hidden="true">2.</strong> GO</a></li><li class="chapter-item expanded "><a href="../rust/rust.html"><strong aria-hidden="true">3.</strong> RUST</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../rust/tower/rust_tower.html"><strong aria-hidden="true">3.1.</strong> Tower</a></li><li class="chapter-item "><a href="../rust/mini-redis/mini-redis.html"><strong aria-hidden="true">3.2.</strong> mini-redis</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../rust/mini-redis/hello_tokio.html"><strong aria-hidden="true">3.2.1.</strong> Hello Tokio</a></li><li class="chapter-item "><a href="../rust/mini-redis/spawning.html"><strong aria-hidden="true">3.2.2.</strong> Spawning</a></li><li class="chapter-item "><a href="../rust/mini-redis/shared_state.html"><strong aria-hidden="true">3.2.3.</strong> Shared state</a></li><li class="chapter-item "><a href="../rust/mini-redis/channels.html"><strong aria-hidden="true">3.2.4.</strong> Channels</a></li><li class="chapter-item "><a href="../rust/mini-redis/io.html"><strong aria-hidden="true">3.2.5.</strong> I/O</a></li><li class="chapter-item "><a href="../rust/mini-redis/framing.html"><strong aria-hidden="true">3.2.6.</strong> Framing</a></li><li class="chapter-item "><a href="../rust/mini-redis/async_in_depth.html"><strong aria-hidden="true">3.2.7.</strong> Async in depth TODO</a></li><li class="chapter-item "><a href="../rust/mini-redis/select.html"><strong aria-hidden="true">3.2.8.</strong> Select TODO</a></li><li class="chapter-item "><a href="../rust/mini-redis/streams.html"><strong aria-hidden="true">3.2.9.</strong> Streams TODO</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../issues/issues.html"><strong aria-hidden="true">4.</strong> issues and solutions</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../issues/docker/docker.html"><strong aria-hidden="true">4.1.</strong> docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../issues/docker/docker_issues.html"><strong aria-hidden="true">4.1.1.</strong> 问题及解决方案</a></li></ol></li><li class="chapter-item "><a href="../issues/mysql/mysql.html"><strong aria-hidden="true">4.2.</strong> mysql</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../issues/mysql/mysql_issues.html"><strong aria-hidden="true">4.2.1.</strong> 问题及解决方案</a></li></ol></li><li class="chapter-item "><a href="../issues/gitea/gitea.html"><strong aria-hidden="true">4.3.</strong> gitea</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../issues/gitea/gitea_issues.html"><strong aria-hidden="true">4.3.1.</strong> 问题及解决方案</a></li></ol></li><li class="chapter-item "><a href="../issues/nginx/nginx.html"><strong aria-hidden="true">4.4.</strong> nginx</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../issues/nginx/nginx_issues.html"><strong aria-hidden="true">4.4.1.</strong> 问题及解决方案</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../blockchain/blockchain.html" class="active"><strong aria-hidden="true">5.</strong> Blockchain TODO</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../blockchain/substrate/substrate.html"><strong aria-hidden="true">5.1.</strong> substrate TODO</a></li></ol></li><li class="chapter-item expanded "><a href="../links/links.html"><strong aria-hidden="true">6.</strong> Links</a></li><li class="chapter-item expanded "><a href="../math/math.html"><strong aria-hidden="true">7.</strong> Math</a></li></ol>
         </div>
         <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
     </nav>
@@ -173,18 +173,18 @@
                 </div>
                 <main>
                     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
-<h2 id="这块内容记录的是我碰到过的一些问题以及解决过程"><a class="header" href="#这块内容记录的是我碰到过的一些问题以及解决过程">这块内容记录的是我碰到过的一些问题以及解决过程。</a></h2>
+<h1 id="blockchain-todo"><a class="header" href="#blockchain-todo">Blockchain TODO</a></h1>
 
                     <div id="giscus-container"></div>
                 </main>
 
                 <nav class="nav-wrapper" aria-label="Page navigation">
                     <!-- Mobile navigation buttons -->
-                    <a rel="prev" href="../rust/mini-redis/streams.html" class="mobile-nav-chapters previous"
+                    <a rel="prev" href="../issues/nginx/nginx_issues.html" class="mobile-nav-chapters previous"
                         title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
-                    <a rel="next" href="../issues/docker/docker.html" class="mobile-nav-chapters next"
+                    <a rel="next" href="../blockchain/substrate/substrate.html" class="mobile-nav-chapters next"
                         title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
@@ -194,11 +194,11 @@
         </div>
 
         <nav class="nav-wide-wrapper" aria-label="Page navigation">
-            <a rel="prev" href="../rust/mini-redis/streams.html" class="nav-chapters previous" title="Previous chapter"
+            <a rel="prev" href="../issues/nginx/nginx_issues.html" class="nav-chapters previous" title="Previous chapter"
                 aria-label="Previous chapter" aria-keyshortcuts="Left">
                 <i class="fa fa-angle-left"></i>
             </a>
-            <a rel="next" href="../issues/docker/docker.html" class="nav-chapters next" title="Next chapter"
+            <a rel="next" href="../blockchain/substrate/substrate.html" class="nav-chapters next" title="Next chapter"
                 aria-label="Next chapter" aria-keyshortcuts="Right">
                 <i class="fa fa-angle-right"></i>
             </a>
@@ -216,7 +216,7 @@
     <script src="../highlight.js" type="text/javascript" charset="utf-8"></script>
     <script src="../book.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript" charset="utf-8">
-        var pagePath = "issues/issues.md"
+        var pagePath = "blockchain/blockchain.md"
     </script>
 
 
