--- a/rust/mini-redis/async_in_depth.html
+++ b/rust/mini-redis/async_in_depth.html
@@ -264,7 +264,12 @@ async fn main() {
 }
 </code></pre></pre>
 <h3 id="async-fn-as-a-future-异步函数作为-future"><a class="header" href="#async-fn-as-a-future-异步函数作为-future">Async fn as a Future （异步函数作为 future）</a></h3>
-<p>在 main 函数中，我们实例化一个 future 并对它调用 <code>.await</code> 。</p>
+<p>在 main 函数中，我们实例化一个 future 并对它调用 <code>.await</code> 。在异步函数中，我们可以对任何实现了 <code>Future</code> 的值调用 <code>.await</code> 。相反，调用一个 <code>async</code> function 返回一个实现了 <code>Future</code> 的匿名类型。<code>async fn main()</code> 所生成的 future 类似于：</p>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span>
+<span class="boring">fn main() {
+</span><span class="boring">}
+</span></code></pre></pre>
 
                     <div id="giscus-container"></div>
                 </main>
