deploy: 0226f35f75bd92c3f7e4e3245fba7692cd07cdfc

--- a/rust/mini-redis/select.html
+++ b/rust/mini-redis/select.html
@@ -173,7 +173,7 @@
                 </div>
                 <main>
                     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
-<h1 id="select-todo"><a class="header" href="#select-todo">Select TODO</a></h1>
+<h2 id="select"><a class="header" href="#select">Select</a></h2>
 
                     <div id="giscus-container"></div>
                 </main>
